fixed clipping

--- a/frontend/src/components/EventsPage/EventsPage.css
+++ b/frontend/src/components/EventsPage/EventsPage.css
@@ -11,16 +11,23 @@ h4 {
 .events-list-card {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  /* align-items: center; */
+  justify-content: center;
   width: 70%;
-  position: absolute;
-  top: 150px;
+  position: relative;
+  top: 130px;
+  margin: 0 auto;
 }
 
-.events-list-header {
+.events-headers {
+  width: 70%;
+  margin: 0 auto;
+}
+
+/* .events-list-header {
   position: relative;
   right: 70px;
-}
+} */
 
 .group-link {
   display: inline-block;
@@ -34,23 +41,24 @@ h4 {
 
 .events-list-header h1 {
   display: inline-block;
-  align-items: center;
-  margin: auto 20px;
+  /* align-items: center; */
+  margin-right: 20px;
   font-size: 24pt;
   font-weight: bold;
   text-decoration: underline;
   color: teal;
 }
 
-.events-list-header-2 {
+/* .events-list-header-2 {
   position: relative;
   right: 121px;
-}
+} */
 
 .main-event-container {
-  width: 50%;
-  position: relative;
-  left: 255px;
+  width: 70%;
+  margin: 0 auto;
+  /* position: relative;
+  left: 255px; */
 }
 
 .event-card {
